<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.apophysis</groupId>
  <artifactId>apophysis-j</artifactId>
  <version>2.10.20</version>
  <packaging>jar</packaging>

  <name>apophysis-j</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mozilla</groupId>
      <artifactId>rhino</artifactId>
      <version>1.7.14</version>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>src/test/java</testSourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <includes>
          <include>**/*.xml</include>
          <include>**/*.txt</include>
          <include>**/*.gif</include>
          <include>**/*.dat</include>
        </includes>
        <excludes>
          <exclude>test/**</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <excludes>
            <exclude>test/**</exclude>
          </excludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <mainClass>org.apophysis.Apophysis</mainClass>
            </manifest>
            <manifestEntries>
              <apophysis-j-version>${project.version}</apophysis-j-version>
              <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
              <Bundle-Name>apophysis-j</Bundle-Name>
              <Bundle-SymbolicName>apophysis-j; singleton:=true</Bundle-SymbolicName>
              <Bundle-Version>${project.version}</Bundle-Version>
              <Bundle-ClassPath>.</Bundle-ClassPath>
              <Bundle-Vendor>Apophysis-j Project</Bundle-Vendor>
              <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
